<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.uniquindio.electiva_iii.controlesbasicos.MainActivity">

    <Button
        android:id="@+id/btn_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="5dp"
        android:onClick="pasarOtrosControles"
        android:text="@string/btn_normal" />
    <ToggleButton
        android:id="@+id/btn_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/btn_inhabilitado"
        android:textOn="@string/btn_habilitado" />

    <ImageButton
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/txt_Icono"
        android:background="#446789"/>
    <Switch
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/txt_encendido"
        android:textOff="@string/txt_apagado"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_flotante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:backgroundTint="#ffffff"
        app:fabSize="normal"/>

</LinearLayout>
